--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,18 @@
 version: "3"
 
 services:
-  jupyter:
+  jupyterlab:
     build: ./docker
+    user: root
+    environment:
+      NB_UID: 1000
+      NB_GID: 100
+      GRANT_SUDO: "yes"
     volumes:
       - .:/code
     tty: true
+    privileged: true
     ports:
       - 8888:8888
+    restart: unless-stopped
+    command: start.sh jupyter lab --NotebookApp.token=''
